# few-shot-woodland-segmentation

./: .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  run_altay.slurm  run_eval.slurm
notebooks/: 03_training_dynamics.ipynb  04_quantitative_results.ipynb  EDA.ipynb  training_curves.ipynb
src/: __init__.py  config.py  dataset.py  preprocess.py  utils.py
