[project]
name = "woodland"
version = "0.1.0"
description = "Few-Shot Learning for Woodland Area Segmentation"
authors = [
    {name = "ZMG"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"

# torch/torchvision installed via conda in the base image (2.1.0).
dependencies = [
    "numpy (>=1.24.0,<2.0.0)",
    "mlflow (>=2.9.0,<4.0.0)",
    "pydantic (>=2.5.0,<3.0.0)",
    "tqdm (>=4.65.0)",
    "timm (>=0.9.0,<2.0.0)",
    "safetensors (>=0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
